--- a/trunk/Properties/Settings.settings
+++ b/trunk/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="wqNotes_frm.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="wqNotes.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Size" Type="System.Drawing.Size" Scope="User">
@@ -25,6 +25,9 @@
     </Setting>
     <Setting Name="LastNumberElem" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="GeneralOptions" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
